chore: sync working tree changes
Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>